[package]
name = "ANM_final_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.1"
itertools = "0.10.5"
plotters = "0.3.4"
polars = {version ="0.29.0", features = ["lazy", "interpolate"]}
rayon = "1.7.0"
serde = "1.0.163"
serde_json = "1.0.96"
